# docs-mcp

./: CLAUDE.md  README.md  config.py  main.py  mcp_standalone.py  pyproject.toml  query_db.py
agent/: __init__.py  agent_builder.py
data/summaries/: dir_summary.md
data/vectordb/project/9175ad2d-4974-4100-ac57-f65de639c9eb/: index_metadata.pickle
ingestion/: __init__.py  docs_scraper.py  repo_ingestor.py
processing/: __init__.py  chunker.py
server/: mcp_server.py  mcp_stdio_server.py
summaries/: __init__.py  dir_summarizer.py
vectordb/: __init__.py  vector_store.py
