[project]
name = "maiar-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]
[tool.ruff]
# Target Python 3.8+
target-version = "py38"

# Set line length
line-length = 88

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules if needed
ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude files/directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "migrations/",
]

[tool.mypy]
# Basic settings
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Strictness settings
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Error settings
show_error_codes = true
show_column_numbers = true
pretty = true

# Import settings
ignore_missing_imports = false
follow_imports = "normal"
